# openrecall

./: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  pyproject.toml  setup.py  start.bat  start.py  tailwind.config.ts  vite.config.ts
frontend/: index.html  manifest.webmanifest  sw.js
frontend/assets/: index-Bjx7vzQ4.css  index-CLVES0wo.js  index-DcuRLGma.css  index-ywwwvkWN.js
openrecall/: ai_client.py  app.py  clustering.py  config.py  database.py  nlp.py  ocr.py  scheduler.py  screenshot.py
src/: app.tsx  main.tsx
src/api/: client.ts  queries.ts
src/components/ui/: label.tsx  searchable-select.tsx  select.tsx  toaster.tsx  use-toast.ts
src/features/chat/: Chat.tsx
src/features/clustering/: cluster.ts
src/features/search/: Omnibar.tsx  searchIndex.ts
src/hooks/: use-toast.ts
src/lib/: utils.ts
src/routes/: chat.tsx  dashboard.tsx  event-detail.tsx  settings.tsx  timeline.tsx
src/state/: eventsSlice.ts  uiSlice.ts
src/styles/: globals.css
src/types/: models.ts
tests/: test_database.py
